src/collection/links.css
* {
	box-sizing: border-box;
	font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
}

.top {
	display: flex;
}

.collection ul {
	display: inline-block;
	list-style: none;
}

.collection ul li {
	padding: 0.2em 0.5em;
}

.collection ul li a {
	display: flex;
	color: black;
	text-decoration: none;
}

.collection ul li:hover {
	border: solid #71a8a8a6 1px;
	border-radius: 4px;
	background-color: #97fcfc48;
}

.tag {
	/* background-color: #95be01; */
	padding: 0.3em;
	border-radius: 0.5em;
	margin: 0 0.2em;

	text-shadow: 2px 0 0 #fff;
}

.tag-value {
	text-shadow: none;
}

.footer {
	position: fixed;
	left: 0;
	bottom: 0;
	width: 100%;
	background-color: #2f2f30;
	color: white;
	text-align: center;

	padding: 0.4em 0;

	font-size: 0.8em;
}

/* Tooltips */
.tooltip {
	position: relative;
	display: inline-block;
}

.tooltip .tooltiptext {
	visibility: hidden;
	width: 120px;
	background-color: black;
	color: #fff;
	text-align: center;
	border-radius: 6px;
	padding: 5px 0;
	position: absolute;
	z-index: 1;
	top: 150%;
	left: 50%;
	margin-left: -60px;
}

.tooltip .tooltiptext::after {
	content: " ";
	position: absolute;
	bottom: 100%;
	left: 50%;
	margin-left: -5px;
	border-width: 5px;
	border-style: solid;
	border-color: transparent transparent black transparent;
}

.tooltip:hover .tooltiptext {
	visibility: visible;
}

